Bug 75272 - [v209] systemctl list-timers is broken
Summary: [v209] systemctl list-timers is broken
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Djalal Harouni
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-20 17:49 UTC by mus.svz
Modified: 2014-02-24 05:03 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dbus-timer: fix bus_timer_vtable to have the correct times (1.87 KB, patch)
2014-02-24 00:51 UTC, Djalal Harouni
Details | Splinter Review

Description mus.svz 2014-02-20 17:49:11 UTC
The new "systemctl list-timers" command shows non-sense times on my machine:

----------

NEXT                         LEFT                  UNIT                         ACTIVATES
Thu 1970-01-01 01:15:00 CET  44 years 1 months ago systemd-tmpfiles-clean.timer systemd-tmpfiles-clean.service
Thu 1970-01-01 01:30:00 CET  44 years 1 months ago backup.timer                 backup.service

2 timers listed.

---------

I'm running Arch Linux x64 and my backup.timer is configured with:

OnBootSec=30m
OnUnitActiveSec=4h
Comment 1 Djalal Harouni 2014-02-24 00:49:24 UTC
(In reply to comment #0)
> The new "systemctl list-timers" command shows non-sense times on my machine:
> 
> ----------
> 
> NEXT                         LEFT                  UNIT                     
> ACTIVATES
> Thu 1970-01-01 01:15:00 CET  44 years 1 months ago
> systemd-tmpfiles-clean.timer systemd-tmpfiles-clean.service
> Thu 1970-01-01 01:30:00 CET  44 years 1 months ago backup.timer             
> backup.service
> 
> 2 timers listed.
> 
> ---------
> 
> I'm running Arch Linux x64 and my backup.timer is configured with:
> 
> OnBootSec=30m
> OnUnitActiveSec=4h

Hi, thanks for reporting!

I've posted a patch upstream that should fix it:
http://lists.freedesktop.org/archives/systemd-devel/2014-February/017322.html
Comment 2 Djalal Harouni 2014-02-24 00:51:06 UTC
Created attachment 94628 [details] [review]
dbus-timer: fix bus_timer_vtable to have the correct times

The patch in case you want to test it. Thanks
Comment 3 Zbigniew Jedrzejewski-Szmek 2014-02-24 05:03:27 UTC
Patch applied as http://cgit.freedesktop.org/systemd/systemd/commit/?id=454f715.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.