dbus-timer: fix bus_timer_vtable to have the correct times

next_elapse_monotonic() should map to the "NextElapseUSecMonotonic"
property and next_elapse_realtime() to "NextElapseUSecRealtime" one.

This makes "systemctl list-timers" compute and show the correct times.

https://bugs.freedesktop.org/show_bug.cgi?id=75272